--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "dentistry",
+  "name": "Elit-Dent",
   "version": "1.0.0",
   "description": "",
   "devDependencies": {
-    "@htmlacademy/editorconfig-cli": "1.x",
-    "autoprefixer": "9.5.x",
+    "autoprefixer": "9.8.x",
     "browser-sync": "2.26.x",
+    "del": "^4.1.1",
+    "editorconfig-cli": "0.3.x",
     "eslint": "4.16.0",
-    "eslint-config-htmlacademy": "0.4.x",
     "gulp": "4.0.x",
     "gulp-csso": "^3.0.1",
+    "gulp-dart-sass": "^1.0.2",
     "gulp-imagemin": "^5.0.3",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "8.0.x",
     "gulp-posthtml": "^3.0.4",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "4.0.x",
     "gulp-sourcemaps": "2.6.x",
     "gulp-svgstore": "^7.0.1",
+    "gulp-twig": "^1.2.0",
     "gulp-webp": "^4.0.1",
     "pixel-glass": "^1.0.13",
     "posthtml-include": "^1.2.0",
-    "stylelint": "9.10.x",
-    "stylelint-config-htmlacademy": "0.1.x"
+    "stylelint": "^9.10.1"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
@@ -47,9 +47,9 @@
     "source/sass/**/*.{sass,scss}"
   ],
   "engines": {
-    "node": "12.19"
+    "node": "14.15"
   },
   "dependencies": {
-    "del": "^4.1.1"
+    "stylelint-config-standard": "^20.0.0"
   }
 }
